fix: add overflow hidden to popin component styles

--- a/src/components/slots/popin/popin.scss
+++ b/src/components/slots/popin/popin.scss
@@ -16,6 +16,7 @@
   max-width: var(--popin-max-width);
   min-height: var(--popin-min-height);
   max-height: 100%;
+  overflow: hidden;
   user-select: none;
 
   &--panel {
